# kids-frontend

./: .env.example  Cargo.toml  rustfmt.toml
assets/graphql/: schema.graphql
assets/locales/en-us/: admin.lang  common.lang  home.lang  ops.lang  project.lang  projects.lang  users.lang
assets/locales/zh-cn/: admin.lang  common.lang  home.lang  ops.lang  project.lang  projects.lang  users.lang
assets/scripts/values/: helper-values.rhai
src/: lib.rs  main.rs
src/models/: mod.rs  projects.rs  users.rs
src/routers/: admin.rs  home.rs  mod.rs  projects.rs  users.rs
src/routes/: home.rs  mod.rs  projects.rs
src/util/: common.rs  constant.rs  email.rs  mod.rs  str_trait.rs  tpl.rs  tpl_data.rs  upload.rs
templates/: index.html  register.html  sign-in.html
templates/admin/: admin-index.html  admin-project-detail.html  admin-projects.html
templates/common/: footer.html  head.html  header.html  nav-global.html  sign.html
templates/projects/: projects-index.html  projects-project-detail.html  projects-project-new.html
templates/users/: users-index.html  users-user-activate.html  users-user-detail.html
