[package]
name = "kids-frontend"
version = "0.0.1"
authors = ["zzy <ask@niqin.com>"]
edition = "2024"

[dependencies]
futures = "0.3"
tokio = { version = "1.45", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }

tokio-util = { version = "0.7", features = ["io"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
lazy_static = "1.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
graphql_client = "0.14"
handlebars = { version = "6.3", features = ["script_helper"] }

percent-encoding = "2.3"
fluent-bundle = "0.16"
lettre = "0.11"

[dev-dependencies]
rhai = "1.22"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
